// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ForwarderForm/>: existed forwarder. Test with snapshot. 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="1"
    >
      Name
    </label>
    <div
      class="input-group"
    >
      <input
        class="form-control"
        id="1"
        type="text"
        value="Google"
      />
    </div>
  </div>
  <h5>
    IPv4 Addresses
  </h5>
  <div
    class="offset-1 col-10"
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label"
        for="2"
      >
        IPv4 #1
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="2"
          type="text"
          value="8.8.8.8"
        />
      </div>
    </div>
    <button
      class="btn btn-outline-success btn-sm col-12 mb-2 d-inline-flex justify-content-center align-items-center"
      type="button"
    >
      <span>
        Add IPv4 address
      </span>
    </button>
  </div>
  <h5>
    IPv6 Addresses
  </h5>
  <div
    class="offset-1 col-10"
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label"
        for="3"
      >
        IPv6 #1
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control"
          id="3"
          type="text"
          value="2001:4860:4860::8888"
        />
      </div>
    </div>
    <button
      class="btn btn-outline-success btn-sm col-12 mb-2 d-inline-flex justify-content-center align-items-center"
      type="button"
    >
      <span>
        Add IPv6 address
      </span>
    </button>
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="4"
    >
      TLS type
    </label>
    <select
      class="form-select"
      id="4"
    >
      <option
        value="no"
      >
        No TLS
      </option>
      <option
        value="hostname"
      >
        Hostname
      </option>
      <option
        value="pin"
      >
        Pin
      </option>
    </select>
    <div
      class="form-text"
    >
      <small>
        "No TLS" means that the regular UDP-base DNS protocol is used.
      </small>
    </div>
  </div>
  <button
    class="btn btn-primary col-lg-12 col-md-12 col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
    type="button"
  >
    <span>
      Save
    </span>
  </button>
</div>
`;

exports[`<ForwarderForm/>: new forwarder. Test with snapshot. 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="1"
    >
      Name
    </label>
    <div
      class="input-group"
    >
      <input
        class="form-control is-invalid"
        id="1"
        type="text"
        value=""
      />
    </div>
    <div
      class="invalid-feedback"
    >
      Forwarder name should have at least one symbol.
    </div>
  </div>
  <h5>
    IPv4 Addresses
  </h5>
  <div
    class="offset-1 col-10"
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label"
        for="2"
      >
        IPv4 #1
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control is-invalid"
          id="2"
          type="text"
          value=""
        />
      </div>
      <div
        class="invalid-feedback"
      >
        Define at least one of the IP addresses of the forwarder.
      </div>
    </div>
    <button
      class="btn btn-outline-success btn-sm col-12 mb-2 d-inline-flex justify-content-center align-items-center"
      type="button"
    >
      <span>
        Add IPv4 address
      </span>
    </button>
  </div>
  <h5>
    IPv6 Addresses
  </h5>
  <div
    class="offset-1 col-10"
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label"
        for="3"
      >
        IPv6 #1
      </label>
      <div
        class="input-group"
      >
        <input
          class="form-control is-invalid"
          id="3"
          type="text"
          value=""
        />
      </div>
      <div
        class="invalid-feedback"
      >
        Define at least one of the IP addresses of the forwarder.
      </div>
    </div>
    <button
      class="btn btn-outline-success btn-sm col-12 mb-2 d-inline-flex justify-content-center align-items-center"
      type="button"
    >
      <span>
        Add IPv6 address
      </span>
    </button>
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="4"
    >
      TLS type
    </label>
    <select
      class="form-select"
      id="4"
    >
      <option
        value="no"
      >
        No TLS
      </option>
      <option
        value="hostname"
      >
        Hostname
      </option>
      <option
        value="pin"
      >
        Pin
      </option>
    </select>
    <div
      class="form-text"
    >
      <small>
        "No TLS" means that the regular UDP-base DNS protocol is used.
      </small>
    </div>
  </div>
  <button
    class="btn btn-primary col-lg-12 col-md-12 col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
    disabled=""
    type="button"
  >
    <span>
      Save
    </span>
  </button>
</div>
`;
